NetBSD Problem Report #11221
Received: (qmail 641 invoked from network); 14 Oct 2000 15:23:26 -0000
Message-Id: <Pine.SOL.4.21.0010141618430.28200-100000@draco.cus.cam.ac.uk>
Date: Sat, 14 Oct 2000 16:23:23 +0100 (BST)
From: Ben Harris <bjh21@netbsd.org>
Sender: Ben Harris <bjh21@cus.cam.ac.uk>
To: gnats-bugs@gnats.netbsd.org
Subject: POSIX.2: patch -i <patchfile> is not supported
>Number: 11221
>Category: standards
>Synopsis: POSIX.2: patch -i <patchfile> is not supported
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: standards-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Oct 14 15:24:00 +0000 2000
>Closed-Date: Mon Oct 16 07:05:58 +0000 2000
>Last-Modified: Mon Oct 16 07:05:58 +0000 2000
>Originator: Ben Harris
>Release: 2000-02-07
>Organization:
>Environment:
NetBSD cromarty 1.4X NetBSD 1.4X (CROMARTY) #9: Wed May 3 23:49:51 BST 2000
bjh21@cromarty:/usr/src/sys/arch/macppc/compile/CROMARTY macppc
>Description:
According to POSIX.2, patch -i <patchfile> should cause patch to read
patches from that file rather than from standard input. It doesn't.
>How-To-Repeat:
cromarty:~$ patch -i /dev/null
patch: unrecognized option `-i'
Usage: patch [options] [origfile [patchfile]] [+ [options] [origfile]]...
Options:
[-ceEflnNRsStuv] [-b backup-ext] [-B backup-prefix] [-d directory]
[-D symbol] [-Fmax-fuzz] [-o out-file] [-p[strip-count]]
[-r rej-name] [-V {numbered,existing,simple}]
>Fix:
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: kleink
State-Changed-When: Mon Oct 16 00:05:21 PDT 2000
State-Changed-Why:
Fixed; added an equivalent --patchfile option along with it.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.