Support the 1003.2-92 -i option to specify a patchfile; fixes PR standards/11221.